modify git_hw1 file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 <!--List-->
 			<div id="myinfo">
-			<span style="font-weight:700; font-size:11.5pt;">이정구</span><span style="font-size:9pt; color:#6e6e6e;">(李定求)</span>
+			<span id="name">이정구</span><span id="name2">(李定求)</span>
 			<ul>
 				<li>출생: 1989년 6월 1일</li>
 				<li>신체: 171cm, 73kg</li>
@@ -46,7 +46,7 @@
 
 	<div id="recent">
 			<div id="recent-menuBox">
-				<span style="position:relative; top:8px;">최근근황</span>
+				<span class="recent-text">최근근황</span>
 			</div>
 			
 			<div id="recent-content">
