--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div id="tab3">육군병장<br/>만기제대<br/>2012.01</div>
 			</div>
 	</div>
-	<div id="text">※Link는 위의 || Who am I? || Schedule || Survey ||를 클릭해주세요</div>
+	<div id="text">※Navigation Menu는 위의 || Who am I? || Schedule || Survey ||를 클릭해주세요</div>
 	<div id="Copyright">Copyright (c) 2012 Lee Jung Gu. all rights reserved</div>
 
 </div>
