--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
 		</tbody>
 	</table>
 <br/>
-	<div id="text">※Link는 위의 || Who am I? || Schedule || Survey ||를 클릭해주세요</div>
+	<div id="text">※Navigation Menu는 위의 || Who am I? || Schedule || Survey ||를 클릭해주세요</div>
 	<div id="Copyright">Copyright (c) 2012 Lee Jung Gu. all rights reserved</div>
 
 </div>
